# pixelin

./: Cargo.toml
assets/languages/en_US/: lang.ftl
docs/: 项目描述.odt
src/: canvas.rs  config.rs  group_checker.rs  main.rs  menu_bar.rs  mix_methods.rs  patterns.rs  pressure_mask.rs  tools.rs  tools_bar.rs
